--- a/src/css/home/sectionone.module.css
+++ b/src/css/home/sectionone.module.css
@@ -34,15 +34,22 @@
   height: 80%;
 }
 .cat_products_wrap {
+  height: 620px;
   display: flex;
-  align-items: center;
+  justify-content: space-between;
+  margin-top: 100px;
 }
 .cat_products_carousel {
-  width: 70vw;
+  width: 70%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
+
 .cat_poster {
-  height: 620px;
-  width: 25vw;
+  height: 100%;
+  width: 27%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -66,15 +73,42 @@
   bottom: 0;
   left: 0;
 }
-crousel_wrapper {
-  height: 35vw;
+.crousel_wrapper {
+  width: 100%;
 }
 .cat_products_card {
   width: 19vw;
-  height: 35vw;
+  height: 32vw;
   text-align: center;
 }
-
+.cat_products_carousel ul {
+  display: flex;
+  gap: 22px;
+  width: fit-content;
+  margin: 0px auto 50px auto;
+  color: var(--fadecolor);
+}
+.cat_products_carousel ul > li {
+  position: relative;
+  line-height: 35px;
+  font-size: 20px;
+  cursor: pointer;
+  font-weight: 700;
+}
+.category_list {
+  color: var(--black);
+  font-size: 20px;
+}
+.category_list::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  color: var(--black);
+  background-color: black;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
 .cat_products_card > p {
   font-size: 10px;
   color: var(--fadecolor);
@@ -102,24 +136,24 @@ crousel_wrapper {
 }
 .cat_products_card_img {
   width: 100%;
-  height: 65%;
+  height: 73%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow-y: hidden;
 }
+
 .card_img_top_wrap {
   width: 100%;
   height: 50px;
   display: flex;
   align-items: center;
-
-  justify-content: space-between;
 }
 .sale_tag {
-  padding: 5px 20px;
+  padding: 5px 10px;
   background-color: #76bc42;
   color: white;
   font-weight: 400;
@@ -127,9 +161,12 @@ crousel_wrapper {
   font-family: var(--fontlight);
 }
 .card_img_top_wrap span {
+  margin-left: auto;
   font-size: 22px;
   height: 22px;
   margin-right: 15px;
+  transition: 250ms;
+  translate: 0 -35px;
 }
 .card_img_bottom_wrap {
   width: 90%;
@@ -138,7 +175,10 @@ crousel_wrapper {
   justify-content: space-between;
   cursor: pointer;
   margin: 0 auto;
+  translate: 0 55px;
+  transition: 250ms;
 }
+
 .addcart_btn,
 .card_img_bottom_wrap > span {
   padding: 18px 10px;
@@ -154,4 +194,8 @@ crousel_wrapper {
 }
 .card_img_bottom_wrap > span {
   background-color: white;
+}
+.cat_products_card:hover .card_img_bottom_wrap,
+.cat_products_card:hover .card_img_top_wrap span {
+  translate: 0 0;
 }
