--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,10 @@ h4 {
   font-size: 26px;
   font-weight: 700;
 }
+h3 {
+  font-size: 36px;
+  font-weight: 600;
+}
 h2 {
   font-size: 48px;
   font-weight: 600;
@@ -48,11 +52,12 @@ p {
   font-size: 16px;
   line-height: 26px;
   font-weight: 400;
-
+  color: var(--pfontcolor);
   font-family: "Muli-light";
 }
 ul {
   list-style-type: none;
+  font-family: var(--fontlight);
 }
 a {
   text-decoration: none;
