--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   font-family: "Muli";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
 }
 
 * {
