--- a/src/css/home/sectionone.module.css
+++ b/src/css/home/sectionone.module.css
@@ -52,7 +52,7 @@
   width: 27%;
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: center top;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -198,4 +198,36 @@
 .cat_products_card:hover .card_img_bottom_wrap,
 .cat_products_card:hover .card_img_top_wrap span {
   translate: 0 0;
+}
+@media only screen and (max-width: 1080px) {
+  .categories_wrap {
+    flex-direction: column;
+  }
+  .category {
+    margin-top: 15px;
+    width: 100%;
+    height: 40vw;
+  }
+  .cat_products_wrap{
+    flex-direction: column;
+    height: auto;
+  }
+  .cat_products_wrap{
+    height: auto;
+  }
+  .cat_poster{
+    width: 100%;
+    height: 50vh;
+  }
+  .cat_products_carousel{
+    width: 100%;
+    margin-top: 15px;
+    height: 50vh;
+  }
+ 
+  .cat_products_card{
+    width: 100%;
+    height: 40vh;
+    
+  }
 }
