--- a/src/css/home/sectionthree.module.css
+++ b/src/css/home/sectionthree.module.css
@@ -1,12 +1,11 @@
 .collection_gal_wrapper {
   width: 100vw;
-  height: 320px;
   display: flex;
   margin-top: 80px;
 }
 .image_wrapper {
   width: calc(100% / 6);
-  height: 100%;
+  height: 320px;
   display: flex;
   background-position: center;
   background-repeat: no-repeat;
@@ -35,6 +34,7 @@
 .blogs_wrapper {
   margin-top: 80px;
   text-align: center;
+
 }
 .blogs_wrapper h3 {
   color: var(--black);
@@ -55,8 +55,9 @@
 }
 .blogs {
   display: flex;
-  justify-content: space-around;
+  gap: 30px;
   margin-top: 35px;
+  flex-wrap: wrap;
 }
 .blog_container {
   width: 360px;
@@ -106,8 +107,8 @@
   justify-content: center;
   align-items: center;
 }
-.service:nth-child(2){
-  border-left:1px solid #e5e5e5 ;
+.service:nth-child(2) {
+  border-left: 1px solid #e5e5e5;
   border-right: 1px solid #e5e5e5;
 }
 .icon {
@@ -122,4 +123,28 @@
 }
 .service_text h6:last-child {
   font-family: var(--fontlight);
+}
+@media only screen and (max-width: 1200px) {
+.blog_container{
+  width: calc(100%/3 - 30px);
+}
+}
+@media only screen and (max-width: 1200px) {
+  .blog_container{
+    width: calc(100%/2 - 30px);
+  }
+  }
+@media only screen and (max-width: 768px) {
+  .collection_gal_wrapper {
+    flex-wrap: wrap;
+  }
+  .image_wrapper {
+    width: calc(100% / 2);
+  }
+}
+@media only screen and (max-width: 480px) {
+  
+  .image_wrapper {
+    width: 100%;
+  }
 }
